--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -12,7 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.3" PrivateAssets="all" />
     <PackageReference Include="HtmlSanitizer" Version="5.0.274-beta" />
-    <PackageReference Include="Markdig" Version="0.18.1" />
+    <PackageReference Include="Markdig" Version="0.18.3" />
+    <PackageReference Include="ReadTimeEstimator" Version="1.0.0" />
     <PackageReference Include="YamlDotNet" Version="8.1.0" />
     <PackageReference Include="Blazor-Analytics" Version="3.11.0" />
   </ItemGroup>
