--- a/Processor/Processor.csproj
+++ b/Processor/Processor.csproj
@@ -8,8 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Markdig" Version="0.18.1" />
+    <PackageReference Include="Markdig" Version="0.18.3" />
     <PackageReference Include="YamlDotNet" Version="8.1.0" />
+    <PackageReference Include="ReadTimeEstimator" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
