--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <!-- <PackageReference Include="BlazorWasmPreRendering.Build" Version="1.0.0-preview.28.0" /> -->
+    <PackageReference Include="BlazorWasmPreRendering.Build" Version="2.0.0-preview.1" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version=" 7.0.0-rc.1.22427.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.0-rc.1.22427.2" PrivateAssets="all" />
