--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -8,8 +8,11 @@
     <BlazorWasmPrerenderingOutputStyle>AppendHtmlExtension</BlazorWasmPrerenderingOutputStyle>
   </PropertyGroup>
 
+  <ItemGroup Condition="'$(PRERENDER)' != ''"> 
+    <PackageReference Include="BlazorWasmPreRendering.Build" Version="2.0.0-preview.7" />
+  </ItemGroup>
+
   <ItemGroup>
-    <!-- <PackageReference Include="BlazorWasmPreRendering.Build" Version="2.0.0-preview.7" /> -->
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version=" 7.0.0-rc.1.22427.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.0-rc.1.22427.2" PrivateAssets="all" />
