--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -9,13 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup Condition="'$(PRERENDER)' != ''"> 
-    <PackageReference Include="BlazorWasmPreRendering.Build" Version="2.0.0-preview.7" />
+    <PackageReference Include="BlazorWasmPreRendering.Build" Version="3.0.0-preview.2" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.14.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version=" 7.0.0-rc.1.22427.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.0-rc.1.22427.2" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version=" 7.0.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.*" PrivateAssets="all" />
     <PackageReference Include="HtmlSanitizer" Version="8.0.601" />
     <PackageReference Include="Markdig" Version="0.18.3" />
     <PackageReference Include="ReadTimeEstimator" Version="1.0.0" />
