--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -19,10 +19,10 @@
   <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version=" 9.0.1-*" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer"
-      Version="9.0.1-*" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.1-*" PrivateAssets="all" />
     <PackageReference Include="HtmlSanitizer" Version="9.0.876" />
     <PackageReference Include="Markdig" Version="0.18.3" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.4" />
     <PackageReference Include="ReadTimeEstimator" Version="1.0.0" />
     <PackageReference Include="YamlDotNet" Version="8.1.0" />
     <PackageReference Include="Blazor-Analytics" Version="3.11.0" />
